--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link
-      href="http://fonts.googleapis.com/css?family=Roboto:500,400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
+      href="https://fonts.googleapis.com/css?family=Roboto:500,400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
       rel="stylesheet"
       type="text/css"
     />
