--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:500,400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:500,400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
+    rel="stylesheet" type="text/css" />
+  <link rel="icon" href="/src/assets/svg/chat.svg" type="image/svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chattari</title>
+  <meta name="description"
+    content="Chattari is a chat application that allows you to chat with your friends and family." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
